<resources>
    <string name="app_name">ZEUS</string>
    <string name="result">0</string>
    <string name="btn1">%</string>
    <string name="btn2">1/x</string>
    <string name="btn3">7</string>
    <string name="btn4">4</string>
    <string name="btn5">1</string>
    <string name="btn6">+/-</string>

    <string name="btn7">CE</string>
    <string name="btn8">x^2</string>
    <string name="btn9">8</string>
    <string name="btn10">5</string>
    <string name="btn11">2</string>
    <string name="btn12">0</string>

    <string name="btn13">C</string>
    <string name="btn14">x</string>
    <string name="btn15">9</string>
    <string name="btn16">6</string>
    <string name="btn17">3</string>
    <string name="btn18">.</string>

    <string name="btn19">Del</string>
    <string name="btn20">/</string>
    <string name="btn21">X</string>
    <string name="btn22">-</string>
    <string name="btn23">+</string>
    <string name="btn24">=</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>