<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btnBack"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/Result"
      android:layout_width="386dp"
      android:layout_height="125dp"
      android:layout_marginTop="120dp"
      android:gravity="end"
      android:text="@string/result"
      android:textAlignment="viewEnd"
      android:textSize="40dp"
      app:layout_constraintEnd_toStartOf="@+id/guideline3"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed"
      tools:ignore="MissingConstraints" />

  <TextView
      android:id="@+id/subesult"
      android:layout_width="387dp"
      android:layout_height="82dp"
      android:layout_marginStart="11dp"
      android:layout_marginLeft="11dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="13dp"
      android:layout_marginRight="13dp"
      android:layout_marginBottom="23dp"
      android:gravity="end"
      android:textSize="20dp"
      app:layout_constraintBottom_toTopOf="@+id/Result"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0" />

  <Button
      android:id="@+id/btn24"
      android:layout_width="85dp"
      android:layout_height="65dp"
      android:layout_marginStart="12dp"
      android:layout_marginLeft="12dp"
      android:layout_marginEnd="19dp"
      android:layout_marginRight="19dp"
      android:background="@drawable/button_background"
      android:text="@string/btn24"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/btn18"
      app:layout_constraintTop_toBottomOf="@+id/btn23"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn3"
      android:layout_width="85dp"
      android:layout_height="65dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:background="@drawable/button_background"
      android:text="@string/btn3"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toTopOf="@+id/btn4"
      app:layout_constraintEnd_toStartOf="@+id/btn9"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn2"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn2"
      android:layout_width="85dp"
      android:layout_height="65dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:background="@drawable/button_background"
      android:text="@string/btn2"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toTopOf="@+id/btn3"
      app:layout_constraintEnd_toStartOf="@+id/btn13"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline5"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn4"
      android:layout_width="85dp"
      android:layout_height="65dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:background="@drawable/button_background"
      android:text="@string/btn4"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toTopOf="@+id/btn5"
      app:layout_constraintEnd_toStartOf="@+id/btn10"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn3"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn5"
      android:layout_width="85dp"
      android:layout_height="65dp"

      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:background="@drawable/button_background"
      android:text="@string/btn5"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toTopOf="@+id/btn6"
      app:layout_constraintEnd_toStartOf="@+id/btn11"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn4"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn6"
      android:layout_width="85dp"
      android:layout_height="65dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"

      android:background="@drawable/button_background"
      android:text="@string/btn6"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/btn12"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn5"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn9"
      android:layout_width="85dp"
      android:layout_height="65dp"
      android:layout_marginStart="12dp"

      android:layout_marginLeft="12dp"
      android:layout_marginEnd="12dp"
      android:layout_marginRight="12dp"
      android:background="@drawable/button_background"
      android:text="@string/btn9"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toTopOf="@+id/btn10"
      app:layout_constraintEnd_toStartOf="@+id/btn15"
      app:layout_constraintStart_toEndOf="@+id/btn3"
      app:layout_constraintTop_toBottomOf="@+id/btn13"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn11"
      android:layout_width="85dp"
      android:layout_height="65dp"
      android:layout_marginStart="12dp"
      android:layout_marginLeft="12dp"
      android:layout_marginEnd="12dp"
      android:layout_marginRight="12dp"
      android:background="@drawable/button_background"
      android:text="@string/btn11"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toTopOf="@+id/btn12"
      app:layout_constraintEnd_toStartOf="@+id/btn17"
      app:layout_constraintStart_toEndOf="@+id/btn5"
      app:layout_constraintTop_toBottomOf="@+id/btn10"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn12"
      android:layout_width="85dp"
      android:layout_height="65dp"
      android:layout_marginStart="12dp"
      android:layout_marginLeft="12dp"
      android:background="@drawable/button_background"
      android:text="@string/btn12"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/btn18"
      app:layout_constraintStart_toEndOf="@+id/btn6"
      app:layout_constraintTop_toBottomOf="@+id/btn11"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn10"
      android:layout_width="85dp"
      android:layout_height="65dp"
      android:layout_marginStart="12dp"

      android:layout_marginLeft="12dp"
      android:background="@drawable/button_background"
      android:text="@string/btn10"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toTopOf="@+id/btn11"
      app:layout_constraintEnd_toStartOf="@+id/btn16"
      app:layout_constraintStart_toEndOf="@+id/btn4"
      app:layout_constraintTop_toBottomOf="@+id/btn9"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn13"
      android:layout_width="85dp"
      android:layout_height="66dp"

      android:layout_marginStart="12dp"
      android:layout_marginLeft="12dp"
      android:background="@drawable/button_background"
      android:text="@string/btn13"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toTopOf="@+id/btn9"
      app:layout_constraintEnd_toStartOf="@+id/btn19"
      app:layout_constraintStart_toEndOf="@+id/btn2"
      app:layout_constraintTop_toTopOf="@+id/guideline5"
      app:layout_constraintVertical_bias="0.476"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn16"
      android:layout_width="85dp"
      android:layout_height="65dp"
      android:layout_marginStart="12dp"
      android:layout_marginLeft="12dp"

      android:background="@drawable/button_background"
      android:text="@string/btn16"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toTopOf="@+id/btn17"
      app:layout_constraintEnd_toStartOf="@+id/btn22"
      app:layout_constraintStart_toEndOf="@+id/btn10"
      app:layout_constraintTop_toBottomOf="@+id/btn15"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn15"
      android:layout_width="85dp"
      android:layout_height="65dp"

      android:background="@drawable/button_background"
      android:text="@string/btn15"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toTopOf="@+id/btn16"
      app:layout_constraintEnd_toStartOf="@+id/btn21"
      app:layout_constraintStart_toEndOf="@+id/btn9"
      app:layout_constraintTop_toBottomOf="@+id/btn19"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn17"
      android:layout_width="85dp"
      android:layout_height="65dp"

      android:background="@drawable/button_background"
      android:text="@string/btn17"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toTopOf="@+id/btn18"
      app:layout_constraintEnd_toStartOf="@+id/btn23"
      app:layout_constraintStart_toEndOf="@+id/btn11"
      app:layout_constraintTop_toBottomOf="@+id/btn16"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn18"
      android:layout_width="85dp"
      android:layout_height="65dp"

      android:layout_marginStart="12dp"
      android:layout_marginLeft="12dp"
      android:background="@drawable/button_background"
      android:text="@string/btn18"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/btn24"
      app:layout_constraintStart_toEndOf="@+id/btn12"
      app:layout_constraintTop_toBottomOf="@+id/btn17"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn20"
      android:layout_width="85dp"
      android:layout_height="65dp"
      android:layout_marginStart="12dp"
      android:layout_marginLeft="12dp"

      android:layout_marginEnd="19dp"
      android:layout_marginRight="19dp"
      android:background="@drawable/button_background"
      android:text="@string/btn20"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toTopOf="@+id/btn21"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/btn19"
      app:layout_constraintTop_toTopOf="@+id/guideline5"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn19"
      android:layout_width="85dp"
      android:layout_height="65dp"
      android:layout_marginStart="12dp"
      android:layout_marginLeft="12dp"
      android:background="@drawable/button_background"
      android:text="@string/btn19"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toTopOf="@+id/btn15"
      app:layout_constraintEnd_toStartOf="@+id/btn20"
      app:layout_constraintStart_toEndOf="@+id/btn13"
      app:layout_constraintTop_toTopOf="@+id/guideline5"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn21"
      android:layout_width="85dp"
      android:layout_height="65dp"
      android:layout_marginStart="12dp"
      android:layout_marginLeft="12dp"
      android:layout_marginEnd="19dp"
      android:layout_marginRight="19dp"
      android:background="@drawable/button_background"
      android:text="@string/btn21"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toTopOf="@+id/btn22"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/btn15"
      app:layout_constraintTop_toBottomOf="@+id/btn20"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn22"
      android:layout_width="85dp"
      android:layout_height="65dp"
      android:layout_marginStart="12dp"
      android:layout_marginLeft="12dp"
      android:layout_marginEnd="19dp"

      android:layout_marginRight="19dp"
      android:background="@drawable/button_background"
      android:text="@string/btn22"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toTopOf="@+id/btn23"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/btn16"
      app:layout_constraintTop_toBottomOf="@+id/btn21"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/btn23"
      android:layout_width="85dp"
      android:layout_height="65dp"
      android:layout_marginStart="12dp"

      android:layout_marginLeft="12dp"
      android:layout_marginEnd="19dp"
      android:layout_marginRight="19dp"
      android:background="@drawable/button_background"
      android:text="@string/btn23"
      android:textColor="@color/black"
      android:textSize="20dp"
      app:backgroundTint="#CDE91E1E"
      app:layout_constraintBottom_toTopOf="@+id/btn24"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/btn17"
      app:layout_constraintTop_toBottomOf="@+id/btn22"
      tools:ignore="MissingConstraints" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.97" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.03" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.47" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_end="89dp" />


</androidx.constraintlayout.widget.ConstraintLayout>